<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcolor">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/bSoundOffOn"
            style="@style/bSettingStyle"
            android:background="@android:color/transparent"
            android:contentDescription="@string/buttonSound" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutButtons"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/marginBotton"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tGame"
            style="@style/textPuzzleStyle"
            android:text="@string/game" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bNewGame"
            style="@style/bMenuStyle"
            android:text="@string/newGame" />

        <Button
            android:id="@+id/bСontinue"
            style="@style/bMenuStyle"
            android:text="@string/continueGame" />

        <Button
            android:id="@+id/bHelp"
            style="@style/bMenuStyle"
            android:text="@string/Help" />

        <Button
            android:id="@+id/bExit"
            style="@style/bMenuStyle"
            android:text="@string/exitGame" />
    </LinearLayout>
</RelativeLayout>