<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcolor">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/bSoundOffOn"
            style="@style/bSettingStyle"
            android:background="@android:color/transparent"
            android:contentDescription="@string/buttonSound" />

        <ImageButton
            android:id="@+id/bBackMenu"
            style="@style/bSettingStyle"
            android:background="@drawable/back"
            android:contentDescription="@string/button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutButtons"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/levelMarginBotton"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tGame"
            style="@style/textPuzzleStyle"
            android:text="@string/newGame" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/bLevel9"
            style="@style/levelButton"
            android:background="@drawable/level8" />

        <ImageButton
            android:id="@+id/bLevel15"
            style="@style/levelButton"
            android:background="@drawable/level15" />

        <ImageButton
            android:id="@+id/bLevel24"
            style="@style/levelButton"
            android:background="@drawable/level24" />
    </LinearLayout>
</RelativeLayout>