<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcolor">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/bAboutGame"
            style="@style/bSettingStyle"
            android:background="@drawable/about"
            android:contentDescription="@string/about_title" />

        <ImageButton
            android:id="@+id/bSoundOffOn"
            style="@style/bSettingStyle"
            android:background="@android:color/transparent"
            android:contentDescription="@string/buttonSound" />

        <ImageButton
            android:id="@+id/bNewGame"
            style="@style/bSettingStyle"
            android:background="@drawable/restart"
            android:contentDescription="@string/newGame" />

        <ImageButton
            android:id="@+id/bBackMenu"
            style="@style/bSettingStyle"
            android:background="@drawable/back"
            android:contentDescription="@string/MainMenu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="750dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gameName"
            style="@style/textPuzzleStyle"
            android:text="@string/game24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tSScore"
                style="@style/textGameStyle24"
                android:text="@string/Score"
                android:textSize="@dimen/textScore24" />

            <TextView
                android:id="@+id/tScore"
                style="@style/textGameStyle24"
                android:textSize="@dimen/textScore24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tBestSScore"
                style="@style/textGameStyle24"
                android:text="@string/bestScore"
                android:textSize="@dimen/textBestScore24" />

            <TextView
                android:id="@+id/tBestScore"
                style="@style/textGameStyle24"
                android:textSize="@dimen/textBestScore24" />
        </LinearLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:columnCount="5"
            android:rowCount="5">

            <ImageButton
                android:id="@+id/b2400"
                style="@style/gridBGameStyle24"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2401"
                style="@style/gridBGameStyle24"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2402"
                style="@style/gridBGameStyle24"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2403"
                style="@style/gridBGameStyle24"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2404"
                style="@style/gridBGameStyle24"
                android:layout_row="0"
                android:layout_column="4"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2410"
                style="@style/gridBGameStyle24"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2411"
                style="@style/gridBGameStyle24"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2412"
                style="@style/gridBGameStyle24"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2413"
                style="@style/gridBGameStyle24"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2414"
                style="@style/gridBGameStyle24"
                android:layout_row="1"
                android:layout_column="4"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2420"
                style="@style/gridBGameStyle24"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2421"
                style="@style/gridBGameStyle24"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2422"
                style="@style/gridBGameStyle24"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2423"
                style="@style/gridBGameStyle24"
                android:layout_row="2"
                android:layout_column="3"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2424"
                style="@style/gridBGameStyle24"
                android:layout_row="2"
                android:layout_column="4"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2430"
                style="@style/gridBGameStyle24"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2431"
                style="@style/gridBGameStyle24"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2432"
                style="@style/gridBGameStyle24"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2433"
                style="@style/gridBGameStyle24"
                android:layout_row="3"
                android:layout_column="3"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2434"
                style="@style/gridBGameStyle24"
                android:layout_row="3"
                android:layout_column="4"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2440"
                style="@style/gridBGameStyle24"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2441"
                style="@style/gridBGameStyle24"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2442"
                style="@style/gridBGameStyle24"
                android:layout_row="4"
                android:layout_column="2"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2443"
                style="@style/gridBGameStyle24"
                android:layout_row="4"
                android:layout_column="3"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b2444"
                style="@style/gridBGameStyle24"
                android:layout_row="4"
                android:layout_column="4"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button" />
        </GridLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="710dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
</RelativeLayout>