<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcolor">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/bAboutGame"
            style="@style/bSettingStyle"
            android:background="@drawable/about"
            android:contentDescription="@string/button" />

        <ImageButton
            android:id="@+id/bSoundOffOn"
            style="@style/bSettingStyle"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button" />

        <ImageButton
            android:id="@+id/bNewGame"
            style="@style/bSettingStyle"
            android:background="@drawable/restart"
            android:contentDescription="@string/button" />

        <ImageButton
            android:id="@+id/bBackMenu"
            style="@style/bSettingStyle"
            android:background="@drawable/back"
            android:contentDescription="@string/button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="750dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gameName"
            style="@style/textPuzzleStyle"
            android:text="@string/game8" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tSScore"
                style="@style/textGameStyle9"
                android:text="@string/Score"
                android:textSize="@dimen/textScore9" />

            <TextView
                android:id="@+id/tScore"
                style="@style/textGameStyle9"
                android:textSize="@dimen/textScore9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tBestSScore"
                style="@style/textGameStyle15"
                android:text="@string/bestScore"
                android:textSize="@dimen/textBestScore9" />

            <TextView
                android:id="@+id/tBestScore"
                style="@style/textGameStyle15"
                android:textSize="@dimen/textBestScore9" />
        </LinearLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:columnCount="3"
            android:rowCount="3">

            <ImageButton
                android:id="@+id/b900"
                style="@style/gridBGameStyle9"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b901"
                style="@style/gridBGameStyle9"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b902"
                style="@style/gridBGameStyle9"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b910"
                style="@style/gridBGameStyle9"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b911"
                style="@style/gridBGameStyle9"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b912"
                style="@style/gridBGameStyle9"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b920"
                style="@style/gridBGameStyle9"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b921"
                style="@style/gridBGameStyle9"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />

            <ImageButton
                android:id="@+id/b922"
                style="@style/gridBGameStyle9"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button" />
        </GridLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="710dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

</RelativeLayout>
